<resources>
    <string name="app_name">TeaTimer</string>
    <string name="brew_minutes">%1$d Minutes</string>
    <string name="brew_temperature">%1$d°C</string>
    <string name="degrees_celsius">°C</string>
    <string name="start_timer">Start</string>
    <string name="stop_timer">Stop</string>
    <string name="pause_timer">Pause</string>
    <string name="delete_tea">Delete</string>
    <string name="add_tea_name">Tea Name</string>
    <string name="add_tea_temperature">Temperature (°C)</string>
    <string name="add_tea_brewing_time">Brewing Time (min)</string>
    <string name="add_tea_title">Add Tea</string>
    <string name="add_tea_submit">Submit</string>
    <string name="add_tea_cancel">Cancel</string>
    <!--Defaults-->
    <string name="default_text">tortor at</string>
    <string name="default_timer">00:00:00</string>
    <string name="default_temperature">tortor°C</string>
    <string name="hint_add_tea_name">Earl Grey</string>
    <string name="hint_add_tea_temperature">100</string>
    <string name="hint_add_tea_brewing_time">2</string>
    <string name="list_adapter_no_tea">No Tea Yet</string>
</resources>
