<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTeaActivity">

    <TextView
        android:id="@+id/teaName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="18dp"
        android:text="@string/add_tea_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/teaNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTeaTitle" />

    <TextView
        android:id="@+id/teaTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="18dp"
        android:text="@string/add_tea_temperature"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/teaTemperatureEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teaName" />

    <TextView
        android:id="@+id/teaBrewingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="18dp"
        android:text="@string/add_tea_brewing_time"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/teaBrewingTimeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teaTemperature" />

    <EditText
        android:id="@+id/teaNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/hint_add_tea_name"
        android:autofillHints="@string/add_tea_name"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/teaName"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/teaTemperatureEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/hint_add_tea_temperature"
        android:autofillHints="@string/add_tea_temperature"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/teaTemperature"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/teaBrewingTimeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/hint_add_tea_brewing_time"
        android:autofillHints="@string/add_tea_brewing_time"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/teaBrewingTime"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/addTeaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="161dp"
        android:layout_marginRight="161dp"
        android:text="@string/add_tea_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancelTea"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_tea_cancel"
            android:textAllCaps="false"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/submitTea"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_tea_submit"
            android:textAllCaps="false"
            android:textStyle="bold"/>
    </LinearLayout>




</android.support.constraint.ConstraintLayout>